@@ -4,6 +4,7 @@ New in master
 Bugfixes
 --------
 
+* Make "data" from global context available to templated shortcodes (Issue #2488)
 * Don't crash if plugins is a file (Issue #2539)
 
 Features
